samples/_failures_safe/1761211025_de1b8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb43ea4c.c: In function ‘main’:
./samples/SAFE/__tmp_bb43ea4c.c:119:15: error: expected ‘;’ at end of input
  119 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_bb43ea4c.c:119:9: error: expected declaration or statement at end of input
  119 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_bb43ea4c.c:119:9: error: expected declaration or statement at end of input
